<resources>
    <string name="app_name">ImmunizeLU-1</string>
    <string name="my_record">My Record</string>
    <string name="first_name">First Name</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="pro">Pro/Terr</string>
    <string-array name="pro_names">
        <item>Ontario</item>
        <item>British Columbia</item>
    </string-array>
    <string name="title_activity_my__record">My Record</string>
</resources>
