<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="immunizelu.bb.com.immunizelu_1.My_Record"
    tools:showIn="@layout/activity_my__record">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="My Record"
        android:textColor="#b2b2b2"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:text="@string/first_name"
        android:textColor="#4c4c4c"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView"
        android:layout_marginRight="20dp"
        android:hint="@string/tap_to_enter"
        android:textColor="#323232"
        android:textColorHint="#e5e5e5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/last_name"
        android:textColor="#4c4c4c"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tap1"
        android:layout_marginRight="20dp"
        android:hint="@string/tap_to_enter"
        android:textColor="#323232"
        android:textColorHint="#e5e5e5"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tap2"
        android:src="@drawable/bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:id="@+id/age"
        android:textColor="#4c4c4c"
        android:textSize="20sp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/bar"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="45dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/tap3"
        android:hint="@string/tap_to_enter"
        android:textColor="#323232"
        android:textColorHint="#e5e5e5"
        android:textSize="20sp"
        android:layout_below="@+id/bar"
        android:layout_alignStart="@+id/tap2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pro"
        android:id="@+id/pro"
        android:layout_below="@+id/age"
        android:textColor="#4c4c4c"
        android:textSize="20sp"
        android:layout_marginTop="11dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/pro"
        android:layout_alignStart="@+id/age"
        android:layout_marginTop="133dp" />


</RelativeLayout>
